AX: Malformed tables exposing incorrect col and colSpans https://bugs.webkit.org/show_bug.cgi?id=131796

Reviewed by Darin Adler.

Source/WebCore:
Test: accessibility/table-incorrect-colspan-cell.html

When a developer has specified malformed colspans, accessibility is reporting those values instead of the effective column information.

* accessibility/AccessibilityTableCell.cpp:
(WebCore::AccessibilityTableCell::columnIndexRange):

LayoutTests:
* accessibility/table-incorrect-colspan-cell-expected.txt: Added.
* accessibility/table-incorrect-colspan-cell.html: Added.



Canonical link: https://commits.webkit.org/149978@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167558 268f45cc-cd09-0410-ab3c-d52691b4dbfc